{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 2107,
  "lineage": "a5f6f79d-5a4e-9566-4526-4998984e27e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04be8761a7b7911b1",
            "public_dns": "ec2-3-129-122-24.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.122.24",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07a5d15e4649c3a1f",
            "public_dns": "ec2-3-128-70-27.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.70.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dishigw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:internet-gateway/igw-01b0e653319fd7a2c",
            "id": "igw-01b0e653319fd7a2c",
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "gwInternet",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dishnat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04be8761a7b7911b1",
            "id": "nat-036c20469320f7492",
            "network_interface_id": "eni-003008d011544b9b9",
            "private_ip": "172.31.201.205",
            "public_ip": "3.129.122.24",
            "subnet_id": "subnet-0e25a513ffa785611",
            "tags": {
              "Environment": "Test",
              "Name": "gwNAT",
              "Project": "Dish5g"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a5d15e4649c3a1f",
            "id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "eni-0696ce9c8d888066e",
            "private_ip": "172.31.202.189",
            "public_ip": "3.128.70.27",
            "subnet_id": "subnet-0e43bfbd9feacd22d",
            "tags": {
              "Environment": "Test",
              "Name": "gwNAT",
              "Project": "Dish5g"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private01",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05d1a779ff9b6f3501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d1a779ff9b6f350",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04c3da979d99987501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c3da979d9998750",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0093612aa35ec399e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0093612aa35ec399e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-089bb3ebdefc209b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089bb3ebdefc209b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bb23197e8d31e2e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb23197e8d31e2e0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-075ae4a8387dd46cd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-075ae4a8387dd46cd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ede2a2ad50b9bef61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ede2a2ad50b9bef6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ae596911873962991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ae59691187396299",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ca3e9d2bb9d716191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca3e9d2bb9d71619",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dedda6f7b102a97b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dedda6f7b102a97b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03d209fbf921380091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d209fbf92138009",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08e935369b7508ac41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08e935369b7508ac4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-002c44273c226bce91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002c44273c226bce9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09505459e114fc1fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09505459e114fc1fe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ff538951cd2a31781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff538951cd2a3178",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c88c3231614e12c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c88c3231614e12c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af11458c7695a63a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af11458c7695a63a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b4d35920a2a8da0f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b4d35920a2a8da0f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08d2bbe288b1ecde91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d2bbe288b1ecde9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-040bc68ceba2c46321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040bc68ceba2c4632",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02437925378e526811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02437925378e52681",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05a09ba2f6c908a091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a09ba2f6c908a09",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private01",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private02",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e522db8fdae0ca131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e522db8fdae0ca13",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00886fd59730e9bf71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00886fd59730e9bf7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03cf62ab511a2b8111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03cf62ab511a2b811",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b719c48ec492fc1f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b719c48ec492fc1f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ebdd3ea8cb4418501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ebdd3ea8cb441850",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ba621b23948f18501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ba621b23948f1850",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cd23905a65c8a20e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cd23905a65c8a20e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f6efcf80e3427efe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6efcf80e3427efe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-028f603a91ffdc3d01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028f603a91ffdc3d0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04a84ee93efd907f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a84ee93efd907f7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fd03b985492f77c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd03b985492f77c2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a18de0b43847d9981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a18de0b43847d998",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02ea00b86b4b6b0931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ea00b86b4b6b093",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-091b5bee737eed5bb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-091b5bee737eed5bb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-092fe6502c4c489af1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092fe6502c4c489af",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f211d10768fa0ec91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f211d10768fa0ec9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01164285128ff6c8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01164285128ff6c8d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe283b69e3065c861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe283b69e3065c86",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0788c9add8c58e45e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0788c9add8c58e45e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07ae9313c6d1e9edb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07ae9313c6d1e9edb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e78a8eb8fbb071b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-036c20469320f7492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e78a8eb8fbb071b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03283ae361686c0b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f79e3cafd22b94df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03283ae361686c0b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dishigw",
            "aws_nat_gateway.dishnat",
            "aws_route_table.private02",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01b0e653319fd7a2c",
            "id": "r-rtb-0a3ba0ccb1491a98d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3ba0ccb1491a98d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.dishigw",
            "aws_route_table.public",
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private01",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05d1a779ff9b6f350",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04c3da979d9998750",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0093612aa35ec399e",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-089bb3ebdefc209b4",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bb23197e8d31e2e0",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-075ae4a8387dd46cd",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ede2a2ad50b9bef6",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ae59691187396299",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ca3e9d2bb9d71619",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dedda6f7b102a97b",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03d209fbf92138009",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08e935369b7508ac4",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-002c44273c226bce9",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09505459e114fc1fe",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ff538951cd2a3178",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c88c3231614e12c7",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0af11458c7695a63a",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b4d35920a2a8da0f",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08d2bbe288b1ecde9",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-040bc68ceba2c4632",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02437925378e52681",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05a09ba2f6c908a09",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private02",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e522db8fdae0ca13",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00886fd59730e9bf7",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03cf62ab511a2b811",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b719c48ec492fc1f",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ebdd3ea8cb441850",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ba621b23948f1850",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cd23905a65c8a20e",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f6efcf80e3427efe",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-028f603a91ffdc3d0",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04a84ee93efd907f7",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fd03b985492f77c2",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a18de0b43847d998",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02ea00b86b4b6b093",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-091b5bee737eed5bb",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-092fe6502c4c489af",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f211d10768fa0ec9",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01164285128ff6c8d",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fe283b69e3065c86",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0788c9add8c58e45e",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07ae9313c6d1e9edb",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09e78a8eb8fbb071b",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03283ae361686c0b8",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PrivateRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a3ba0ccb1491a98d",
            "owner_id": "562113685341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "PublicRouteTable",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private01",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cff4134f4f30dce",
            "route_table_id": "rtb-05d1a779ff9b6f350",
            "subnet_id": "subnet-00366cdcfdbcbdc10"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b791f6718ce3aa7",
            "route_table_id": "rtb-04c3da979d9998750",
            "subnet_id": "subnet-0d67f19e573be6e71"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c79d2df365796cb",
            "route_table_id": "rtb-0093612aa35ec399e",
            "subnet_id": "subnet-03fc52098e7719010"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051fceb00fb348da3",
            "route_table_id": "rtb-089bb3ebdefc209b4",
            "subnet_id": "subnet-09cf55f87cb473dfa"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0320cc9fd3107eaef",
            "route_table_id": "rtb-0bb23197e8d31e2e0",
            "subnet_id": "subnet-0b7f002d8fc1832b4"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7ebc6d845256f2e",
            "route_table_id": "rtb-075ae4a8387dd46cd",
            "subnet_id": "subnet-0e3f4e4995e9fc290"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07589b0c47dd1103c",
            "route_table_id": "rtb-0ede2a2ad50b9bef6",
            "subnet_id": "subnet-0ccaa3dde268627c7"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d82dc9224791cb48",
            "route_table_id": "rtb-0ae59691187396299",
            "subnet_id": "subnet-0f3b695b6a8dabb44"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0821a3dcff1e5becd",
            "route_table_id": "rtb-0ca3e9d2bb9d71619",
            "subnet_id": "subnet-09dec9c260066387f"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066013e51360894c4",
            "route_table_id": "rtb-0dedda6f7b102a97b",
            "subnet_id": "subnet-0b8e8156a06cf0b94"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeb1da3ba218907f",
            "route_table_id": "rtb-03d209fbf92138009",
            "subnet_id": "subnet-0db447576ec8fd2f1"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f5ae010097e1443",
            "route_table_id": "rtb-08e935369b7508ac4",
            "subnet_id": "subnet-0bd2585f1c67a97de"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0e8d85e7a41fa4a",
            "route_table_id": "rtb-002c44273c226bce9",
            "subnet_id": "subnet-0f93520bb51d4bf72"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf456754f07f5c23",
            "route_table_id": "rtb-09505459e114fc1fe",
            "subnet_id": "subnet-0d599db475f862320"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07864f64a6dcbe16a",
            "route_table_id": "rtb-0ff538951cd2a3178",
            "subnet_id": "subnet-0a66c4cd913681485"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5f7ea085c58b627",
            "route_table_id": "rtb-0c88c3231614e12c7",
            "subnet_id": "subnet-03516fb3f37440a22"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d4a59bd28a38550",
            "route_table_id": "rtb-0af11458c7695a63a",
            "subnet_id": "subnet-09cbcfd1a1bb46467"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0316899718d9fc5ed",
            "route_table_id": "rtb-0b4d35920a2a8da0f",
            "subnet_id": "subnet-0620a30b7993d6dee"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040327edde2eb7151",
            "route_table_id": "rtb-08d2bbe288b1ecde9",
            "subnet_id": "subnet-070f73137fe3c6492"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0327a2ef5ba1f2ce0",
            "route_table_id": "rtb-040bc68ceba2c4632",
            "subnet_id": "subnet-0ad59dda2f313f343"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066f0534c3824048d",
            "route_table_id": "rtb-02437925378e52681",
            "subnet_id": "subnet-089dbb0459b91da4f"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069817064a3d27349",
            "route_table_id": "rtb-05a09ba2f6c908a09",
            "subnet_id": "subnet-00697126c49b37e60"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private01",
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private02",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cb0c54b265f5677",
            "route_table_id": "rtb-0e522db8fdae0ca13",
            "subnet_id": "subnet-0c207e0ea0edf8fcb"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0325f7e3ab7dc172f",
            "route_table_id": "rtb-00886fd59730e9bf7",
            "subnet_id": "subnet-0d8f85b3929a423c4"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7bc42c487cdf43b",
            "route_table_id": "rtb-03cf62ab511a2b811",
            "subnet_id": "subnet-065263ab058073e16"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e2620a5e7e017d0",
            "route_table_id": "rtb-0b719c48ec492fc1f",
            "subnet_id": "subnet-0a1884dcf5454fdb5"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d6e43b285670574",
            "route_table_id": "rtb-0ebdd3ea8cb441850",
            "subnet_id": "subnet-0b78f2ab8720ab10a"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f91578dc7520556",
            "route_table_id": "rtb-0ba621b23948f1850",
            "subnet_id": "subnet-05e92b00f0230760a"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d02ba9a0f4691f4",
            "route_table_id": "rtb-0cd23905a65c8a20e",
            "subnet_id": "subnet-0bdebf2de1884a310"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04759c0118fca8a52",
            "route_table_id": "rtb-0f6efcf80e3427efe",
            "subnet_id": "subnet-0ae3e3f7d6707a0dd"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f12fa4e4a2a17461",
            "route_table_id": "rtb-028f603a91ffdc3d0",
            "subnet_id": "subnet-0b0bf2b327f7e8c2f"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0885e0b208d2acc78",
            "route_table_id": "rtb-04a84ee93efd907f7",
            "subnet_id": "subnet-0302f1a5954e6e7e1"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7834d27f856b3c7",
            "route_table_id": "rtb-0fd03b985492f77c2",
            "subnet_id": "subnet-0ce247be2c7b30ce4"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04048d72f56f0bfc4",
            "route_table_id": "rtb-0a18de0b43847d998",
            "subnet_id": "subnet-0241331523b1ed3fb"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0319cea84c9639aa5",
            "route_table_id": "rtb-02ea00b86b4b6b093",
            "subnet_id": "subnet-0f7a1b144f280861c"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07da8e9e70bc51ca9",
            "route_table_id": "rtb-091b5bee737eed5bb",
            "subnet_id": "subnet-0f40b9ae2ce9d412b"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faf9adc1edc2a7c4",
            "route_table_id": "rtb-092fe6502c4c489af",
            "subnet_id": "subnet-01f2a065c84eadfe1"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008c0e5dd7787b431",
            "route_table_id": "rtb-0f211d10768fa0ec9",
            "subnet_id": "subnet-07556ce3618f3ccd7"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01169f9fe6b66b603",
            "route_table_id": "rtb-01164285128ff6c8d",
            "subnet_id": "subnet-0f64212ed58477632"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f77ef25f55309073",
            "route_table_id": "rtb-0fe283b69e3065c86",
            "subnet_id": "subnet-0659b4097861d354b"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe699438cf702863",
            "route_table_id": "rtb-0788c9add8c58e45e",
            "subnet_id": "subnet-07f77a53c291ceb3d"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa7bf3bcfe8b760a",
            "route_table_id": "rtb-07ae9313c6d1e9edb",
            "subnet_id": "subnet-0ce6d15cceff915b1"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee075c02332d5e96",
            "route_table_id": "rtb-09e78a8eb8fbb071b",
            "subnet_id": "subnet-0d0684661869efa8d"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01745c1a4160ba0d6",
            "route_table_id": "rtb-03283ae361686c0b8",
            "subnet_id": "subnet-061bb26b0032e3478"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private02",
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d14033462f2b38bf",
            "route_table_id": "rtb-0a3ba0ccb1491a98d",
            "subnet_id": "subnet-0e25a513ffa785611"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a40344a12a6de76d",
            "route_table_id": "rtb-0a3ba0ccb1491a98d",
            "subnet_id": "subnet-0e43bfbd9feacd22d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private01",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-00366cdcfdbcbdc10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.1.0/24",
            "id": "subnet-00366cdcfdbcbdc10",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "amfaz1-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0d67f19e573be6e71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.2.0/24",
            "id": "subnet-0d67f19e573be6e71",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "amfaz1-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-03fc52098e7719010",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.3.0/24",
            "id": "subnet-03fc52098e7719010",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "amfaz1-snt3",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-09cf55f87cb473dfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.4.0/24",
            "id": "subnet-09cf55f87cb473dfa",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "amfaz1-snt4",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0b7f002d8fc1832b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.5.0/24",
            "id": "subnet-0b7f002d8fc1832b4",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "amfaz1-snt5",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0e3f4e4995e9fc290",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.6.0/24",
            "id": "subnet-0e3f4e4995e9fc290",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "udmaz1-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0ccaa3dde268627c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.7.0/24",
            "id": "subnet-0ccaa3dde268627c7",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "udmaz1-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0f3b695b6a8dabb44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.8.0/24",
            "id": "subnet-0f3b695b6a8dabb44",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "udmaz1-snt3",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-09dec9c260066387f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.9.0/24",
            "id": "subnet-09dec9c260066387f",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "udmaz1-snt4",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0b8e8156a06cf0b94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.10.0/24",
            "id": "subnet-0b8e8156a06cf0b94",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "udmaz1-snt5",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0db447576ec8fd2f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.11.0/24",
            "id": "subnet-0db447576ec8fd2f1",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "nrdaz1-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0bd2585f1c67a97de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.12.0/24",
            "id": "subnet-0bd2585f1c67a97de",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "smfaz1-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0f93520bb51d4bf72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.13.0/24",
            "id": "subnet-0f93520bb51d4bf72",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "smfaz1-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0d599db475f862320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.14.0/24",
            "id": "subnet-0d599db475f862320",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "upfaz1-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0a66c4cd913681485",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.15.0/24",
            "id": "subnet-0a66c4cd913681485",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "upfaz1-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-03516fb3f37440a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.16.0/24",
            "id": "subnet-03516fb3f37440a22",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "upfaz1-snt3",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-09cbcfd1a1bb46467",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.17.0/24",
            "id": "subnet-09cbcfd1a1bb46467",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "upfaz1-snt4",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0620a30b7993d6dee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.18.0/24",
            "id": "subnet-0620a30b7993d6dee",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "pcfaz1-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-070f73137fe3c6492",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.19.0/24",
            "id": "subnet-070f73137fe3c6492",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "pcfaz1-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0ad59dda2f313f343",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.20.0/24",
            "id": "subnet-0ad59dda2f313f343",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "chfaz1-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-089dbb0459b91da4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.21.0/24",
            "id": "subnet-089dbb0459b91da4f",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "chfaz1-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-00697126c49b37e60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.22.0/24",
            "id": "subnet-00697126c49b37e60",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "chfaz1-snt3",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private02",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0c207e0ea0edf8fcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.101.0/24",
            "id": "subnet-0c207e0ea0edf8fcb",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "amfaz2-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0d8f85b3929a423c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.102.0/24",
            "id": "subnet-0d8f85b3929a423c4",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "amfaz2-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-065263ab058073e16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.103.0/24",
            "id": "subnet-065263ab058073e16",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "amfaz2-snt3",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0a1884dcf5454fdb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.104.0/24",
            "id": "subnet-0a1884dcf5454fdb5",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "amfaz2-snt4",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0b78f2ab8720ab10a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.105.0/24",
            "id": "subnet-0b78f2ab8720ab10a",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "amfaz2-snt5",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-05e92b00f0230760a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.106.0/24",
            "id": "subnet-05e92b00f0230760a",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "udmaz2-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0bdebf2de1884a310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.107.0/24",
            "id": "subnet-0bdebf2de1884a310",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "udmaz2-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0ae3e3f7d6707a0dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.108.0/24",
            "id": "subnet-0ae3e3f7d6707a0dd",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "udmaz2-snt3",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0b0bf2b327f7e8c2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.109.0/24",
            "id": "subnet-0b0bf2b327f7e8c2f",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "udmaz2-snt4",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0302f1a5954e6e7e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.110.0/24",
            "id": "subnet-0302f1a5954e6e7e1",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "udmaz2-snt5",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0ce247be2c7b30ce4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.111.0/24",
            "id": "subnet-0ce247be2c7b30ce4",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "nrdaz2-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0241331523b1ed3fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.112.0/24",
            "id": "subnet-0241331523b1ed3fb",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "smfaz2-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0f7a1b144f280861c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.113.0/24",
            "id": "subnet-0f7a1b144f280861c",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "smfaz2-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0f40b9ae2ce9d412b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.114.0/24",
            "id": "subnet-0f40b9ae2ce9d412b",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "upfaz2-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-01f2a065c84eadfe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.115.0/24",
            "id": "subnet-01f2a065c84eadfe1",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "upfaz2-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-07556ce3618f3ccd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.116.0/24",
            "id": "subnet-07556ce3618f3ccd7",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "upfaz2-snt3",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0f64212ed58477632",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.117.0/24",
            "id": "subnet-0f64212ed58477632",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "upfaz2-snt4",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0659b4097861d354b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.118.0/24",
            "id": "subnet-0659b4097861d354b",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "pcfaz2-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-07f77a53c291ceb3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.119.0/24",
            "id": "subnet-07f77a53c291ceb3d",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "pcfaz2-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0ce6d15cceff915b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.120.0/24",
            "id": "subnet-0ce6d15cceff915b1",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "chfaz2-snt1",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0d0684661869efa8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.121.0/24",
            "id": "subnet-0d0684661869efa8d",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "chfaz2-snt2",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-061bb26b0032e3478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.122.0/24",
            "id": "subnet-061bb26b0032e3478",
            "map_public_ip_on_launch": false,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "chfaz2-snt3",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0e25a513ffa785611",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.201.0/24",
            "id": "subnet-0e25a513ffa785611",
            "map_public_ip_on_launch": true,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "PublicSubnet",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:subnet/subnet-0e43bfbd9feacd22d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.202.0/24",
            "id": "subnet-0e43bfbd9feacd22d",
            "map_public_ip_on_launch": true,
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "PublicSubnet",
              "Project": "Dish5g"
            },
            "vpc_id": "vpc-0086f7ba7dab9e967"
          },
          "dependencies": [
            "aws_vpc.dishvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dishvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:562113685341:vpc/vpc-0086f7ba7dab9e967",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d7b7560f812f4feb",
            "default_route_table_id": "rtb-08846c7f5d75fe878",
            "default_security_group_id": "sg-0cabebb5e8c7d465e",
            "dhcp_options_id": "dopt-b6cc6edd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0086f7ba7dab9e967",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08846c7f5d75fe878",
            "owner_id": "562113685341",
            "tags": {
              "Environment": "Test",
              "Name": "DishVPC",
              "Project": "Dish5g"
            }
          }
        }
      ]
    }
  ]
}